feat: added the reset password feature
